tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/parenthesized-unaryexpression-typeof-unaryexpression-1.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/unaryexpression-typeof-unaryexpression-1.case
// - src/assignment-target-type/invalid/parenthesized.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.

    UnaryExpression: typeof UnaryExpression
    Static Semantics AssignmentTargetType, Return invalid

---*/

$DONOTEVALUATE();

(typeof 1) = 1;
